language/move-compiler/tests/move_check/parser/struct_native_with_fields.exp
error[E02008]: invalid 'struct' declaration
  ┌─ tests/move_check/parser/struct_native_with_fields.move:3:12
  │
3 │     native struct S { f: u64 }
  │            ^^^^^^^^^^^^^^^^^^^ Struct body '{..}' is not allowed for native struct.

